--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -550,6 +550,7 @@
                     <Label Content="Volume:" Height="28" HorizontalAlignment="Left" Margin="6,133,0,0" Name="label4" VerticalAlignment="Top" />
                     <Label Content="0" Height="28" HorizontalAlignment="Left" Margin="65,138,0,0" Name="label5" VerticalAlignment="Top" />
                     <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="281,138,0,0" Name="label6" VerticalAlignment="Top" />
+                    <Button Content="Clear User Data and close" Height="25" HorizontalAlignment="Left" Margin="155,588,0,0" Name="ClearUserDataButton" VerticalAlignment="Top" Width="155" Click="ClearUserDataButton_Click" />
                 </Grid>
             </TabItem>
         </TabControl>
