limit on amount of tweets, fallback for failing images, dynamic opacity.
the amount of tweets gets capped at 40, when a new tweet is posted the
one at the bottom gets removed, if a image fails to load then it is
replaced by the system error icon, also implemented a preference where
you can set the opacity for the tweet text balloons.

--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -35,10 +35,10 @@
     <Grid Width="300" Height="100" MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave">
             <!--<Rectangle Height="72" HorizontalAlignment="Left" Margin="6,6,0,0" Name="rectangle1" Stroke="Black" VerticalAlignment="Top" Width="235" Fill="Black" />-->
         
-            <Polygon
+            <Polygon Name="messagePolygon"
                 Points="6,6 297,6 297,77 25,77 6,95">
                 <Polygon.Fill>
-                    <SolidColorBrush Color="Black" Opacity="0.4"/>
+                    <SolidColorBrush Color="Black" Opacity="0.4" />
                 </Polygon.Fill>
             </Polygon>
             
