--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -493,7 +493,7 @@
                     </TextBlock>
                     <Button Content="Tweet" Height="17" HorizontalAlignment="Center" Margin="76,1,79,0" Name="testbutton" VerticalAlignment="Bottom" Width="100" Click="testbutton_Click" Template="{DynamicResource GlassButton}" Foreground="White" />
                     <Menu Height="18" Name="UserSelectionMenu"  HorizontalAlignment="Right" Width="80"  Margin="70,0,20,0" VerticalAlignment="Bottom" Padding="0" Background="#00000000">
-                        <MenuItem Header="User" Name="UserSelectionMenuCurrentName">
+                        <MenuItem Header="" Name="UserSelectionMenuCurrentName">
                             <!--<MenuItem Header="User_A"/>
                             <MenuItem Header="User_B"/>-->
                         </MenuItem>
@@ -534,11 +534,23 @@
                 <Grid >
                     <Button HorizontalAlignment="Left" Width="90" Height="25" Content="About o3o" Margin="6,0,0,24" VerticalAlignment="Bottom" Click="Button_Click" />
                     <cp:CustomColorPicker SelectedColorChanged="colorpicker_SelectedColorChanged" Name="colorpicker" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="174,45,0,0"></cp:CustomColorPicker>
-                    <Label Content="color for links(requires restart):" Height="18" HorizontalAlignment="Left" Margin="-1,45,0,0" Name="label1" VerticalAlignment="Top" Padding="0" />
-                    <Label Content="use different color for links:" Height="18" HorizontalAlignment="Left" Margin="0,14,0,0" Name="label2" Padding="0" VerticalAlignment="Top" />
+                    <Label Content="color for links(requires restart):" Height="18" HorizontalAlignment="Left" Margin="-1,45,0,0" Name="label1" VerticalAlignment="Top" Padding="0" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <Label Content="use different color for links:" Height="18" HorizontalAlignment="Left" Margin="0,14,0,0" Name="label2" Padding="0" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
                     <CheckBox Checked="checkBox1_Checked" Unchecked="checkBox1_Unchecked" Content="" Height="16" HorizontalAlignment="Left" Margin="174,14,0,0" Name="checkBox1" VerticalAlignment="Top" />
-                    <Label Content="Notification Sound:" Height="18" HorizontalAlignment="Left" Margin="0,84,0,0" Name="label3" Padding="0" VerticalAlignment="Top" />
-                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="174,80,0,0" Name="soundselection" VerticalAlignment="Top" Width="105" Background="#00000000" SelectionChanged="soundselection_SelectionChanged">
+                    <Label Content="Notification Sound:" Height="18" HorizontalAlignment="Left" Margin="0,84,0,0" Name="label3" Padding="0" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="174,80,0,0" Name="soundselection" VerticalAlignment="Top" Width="105" Background="White" SelectionChanged="soundselection_SelectionChanged">
                     </ComboBox>
                     <Button Content="" Height="23" HorizontalAlignment="Left" Margin="284,80,0,0" Name="playbutton" VerticalAlignment="Top" Width="26" Click="playbutton_Click">
                         <Button.Background>
@@ -546,11 +558,44 @@
                         </Button.Background>
                     </Button>
                     <Button Content="Open File" Height="23" HorizontalAlignment="Left" Margin="174,109,0,0" Name="button1" VerticalAlignment="Top" Width="105" Click="button1_Click" />
-                    <Slider Height="23" HorizontalAlignment="Left" Margin="79.393,138,0,0" Name="slider1" VerticalAlignment="Top" Width="199.607" Value="100" UseLayoutRounding="False" Tag="Volume" ValueChanged="slider1_ValueChanged" />
-                    <Label Content="Volume:" Height="28" HorizontalAlignment="Left" Margin="6,133,0,0" Name="label4" VerticalAlignment="Top" />
-                    <Label Content="0" Height="28" HorizontalAlignment="Left" Margin="65,138,0,0" Name="label5" VerticalAlignment="Top" />
-                    <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="281,138,0,0" Name="label6" VerticalAlignment="Top" />
+                    <Slider Height="23" HorizontalAlignment="Right" Margin="0,138,37,0" Name="slider1" VerticalAlignment="Top" Width="153.53" Value="50" UseLayoutRounding="False" Tag="Volume" ValueChanged="slider1_ValueChanged" Maximum="100" />
+                    <Label Content="Volume:" Height="28" HorizontalAlignment="Left" Margin="-1,138,0,0" Name="label4" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <Label Content="0" Height="28" HorizontalAlignment="Right" Margin="0,138,185,0" Name="label5" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="281,138,0,0" Name="label6" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
                     <Button Content="Clear User Data and close" Height="25" HorizontalAlignment="Left" Margin="155,0,0,24" Name="ClearUserDataButton" VerticalAlignment="Bottom" Width="155" Click="ClearUserDataButton_Click" />
+                    <Label Content="Text balloon opacity:" Height="21" HorizontalAlignment="Left" Margin="-1,172,0,0" Name="label7" VerticalAlignment="Top" Padding="0" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <Slider Height="23" HorizontalAlignment="Left" Margin="125,172,0,0" Name="OpacitySlider" VerticalAlignment="Top" Width="154" Value="0.6" Maximum="1" SmallChange="0.01" ValueChanged="OpacitySlider_ValueChanged" TickFrequency="0.1" />
+                    <Label Content="0" Height="28" HorizontalAlignment="Left" Margin="115,172,0,0" Name="label9" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <Label Content="1" Height="28" HorizontalAlignment="Left" Margin="281,172,0,0" Name="label10" VerticalAlignment="Top" >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <TextBox Height="23" MaxLength="2" HorizontalAlignment="Left" Margin="48,141,0,0" Name="volumeLabel" Text="{Binding Path=Value, ElementName=slider1}" VerticalAlignment="Top" Focusable="True" IsEnabled="True" IsReadOnly="True" Background="#00000000" BorderThickness="0" Width="32" TextChanged="volumeLabel_TextChanged">
+                        <TextBox.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                        </TextBox.Effect>
+                    </TextBox>
                 </Grid>
             </TabItem>
         </TabControl>
