--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -427,7 +427,7 @@
                             </LinearGradientBrush>
                         </ListBox.OpacityMask>
                     </ListBox>
-                    <TextBox Name="textBox1" KeyDown="textBox1_KeyDown" VerticalAlignment="Bottom" HorizontalContentAlignment="Left" Width="auto" Height="53" Margin="-1,0,1,17" TextChanged="textBox1_TextChanged" Background="#50FFFFFF" TextWrapping="Wrap" Visibility="Collapsed">
+                    <TextBox Language="en-us" SpellCheck.IsEnabled="True" Name="textBox1" KeyDown="textBox1_KeyDown" VerticalAlignment="Bottom" HorizontalContentAlignment="Left" Width="auto" Height="53" Margin="-1,0,1,17" TextChanged="textBox1_TextChanged" Background="#50FFFFFF" TextWrapping="Wrap" Visibility="Collapsed">
                         <TextBox.Style>
                             <Style>
                                 <Style.Triggers>
@@ -534,20 +534,20 @@
                 <Grid >
                     <Button HorizontalAlignment="Left" Width="90" Height="25" Content="About o3o" Margin="6,0,0,24" VerticalAlignment="Bottom" Click="Button_Click" />
                     <cp:CustomColorPicker SelectedColorChanged="colorpicker_SelectedColorChanged" Name="colorpicker" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="174,45,0,0"></cp:CustomColorPicker>
-                    <Label Content="color for links(requires restart):" Height="18" HorizontalAlignment="Left" Margin="-1,45,0,0" Name="label1" VerticalAlignment="Top" Padding="0" >
+                    <Label Content="color for links(requires restart):" Height="18" HorizontalAlignment="Left" Margin="-1,45,0,0" Name="label1" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="use different color for links:" Height="18" HorizontalAlignment="Left" Margin="0,14,0,0" Name="label2" Padding="0" VerticalAlignment="Top" >
+                    <Label Content="use different color for links:" Height="18" HorizontalAlignment="Left" Margin="0,14,0,0" Name="label2" Padding="0" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
                     <CheckBox Checked="checkBox1_Checked" Unchecked="checkBox1_Unchecked" Content="" Height="16" HorizontalAlignment="Left" Margin="174,14,0,0" Name="checkBox1" VerticalAlignment="Top" />
-                    <Label Content="Notification Sound:" Height="18" HorizontalAlignment="Left" Margin="0,84,0,0" Name="label3" Padding="0" VerticalAlignment="Top" >
+                    <Label Content="Notification Sound:" Height="18" HorizontalAlignment="Left" Margin="0,84,0,0" Name="label3" Padding="0" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
                     <ComboBox Height="23" HorizontalAlignment="Left" Margin="174,80,0,0" Name="soundselection" VerticalAlignment="Top" Width="105" SelectionChanged="soundselection_SelectionChanged">
@@ -559,43 +559,49 @@
                     </Button>
                     <Button Content="Open File" Height="23" HorizontalAlignment="Left" Margin="174,109,0,0" Name="button1" VerticalAlignment="Top" Width="105" Click="button1_Click" />
                     <Slider Height="23" HorizontalAlignment="Right" Margin="0,138,37,0" Name="slider1" VerticalAlignment="Top" Width="154" Value="20" UseLayoutRounding="False" Tag="Volume" ValueChanged="slider1_ValueChanged" Maximum="100" />
-                    <Label Content="Volume:" Height="28" HorizontalAlignment="Left" Margin="-1,142,0,0" Name="label4" VerticalAlignment="Top" Padding="0">
+                    <Label Content="Volume:" Height="28" HorizontalAlignment="Left" Margin="-1,142,0,0" Name="label4" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="0" Height="28" HorizontalAlignment="Right" Margin="0,138,185,0" Name="label5" VerticalAlignment="Top" >
+                    <Label Content="0" Height="28" HorizontalAlignment="Right" Margin="0,138,185,0" Name="label5" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="281,138,0,0" Name="label6" VerticalAlignment="Top" >
+                    <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="281,138,0,0" Name="label6" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
                     <Button Content="Clear User Data and Restart" Height="25" HorizontalAlignment="Left" Margin="155,0,0,24" Name="ClearUserDataButton" VerticalAlignment="Bottom" Width="155" Click="ClearUserDataButton_Click" />
-                    <Label Content="Text balloon opacity:" Height="21" HorizontalAlignment="Left" Margin="-1,172,0,0" Name="label7" VerticalAlignment="Top" Padding="0" >
+                    <Label Content="Text balloon opacity:" Height="21" HorizontalAlignment="Left" Margin="-1,172,0,0" Name="label7" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
                     <Slider Height="23" HorizontalAlignment="Right" Margin="125,172,37,0" Name="OpacitySlider" VerticalAlignment="Top" Width="154" Value="0.6" Maximum="1" SmallChange="0.01" ValueChanged="OpacitySlider_ValueChanged" TickFrequency="0.1" />
-                    <Label Content="0" Height="28"  HorizontalAlignment="Right" Margin="115,172,185,0" Name="label9" VerticalAlignment="Top" >
+                    <Label Content="0" Height="28"  HorizontalAlignment="Right" Margin="115,172,185,0" Name="label9" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="1" Height="28" HorizontalAlignment="Right" Margin="0,172,19,0" Name="label10" VerticalAlignment="Top" >
+                    <Label Content="1" Height="28" HorizontalAlignment="Right" Margin="0,172,19,0" Name="label10" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <TextBox Height="23" MaxLength="2" HorizontalAlignment="Left" Margin="48,141,0,0" Name="volumeLabel" Text="{Binding Path=Value, ElementName=slider1}" VerticalAlignment="Top" Focusable="True" IsEnabled="True" IsReadOnly="True" Background="#00000000" BorderThickness="0" Width="32" TextChanged="volumeLabel_TextChanged">
+                    <TextBox Height="23" MaxLength="2" HorizontalAlignment="Left" Margin="48,141,0,0" Name="volumeLabel" Text="{Binding Path=Value, ElementName=slider1}" VerticalAlignment="Top" Focusable="True" IsEnabled="True" IsReadOnly="True" Background="#00000000" BorderThickness="0" Width="32" TextChanged="volumeLabel_TextChanged" Foreground="White">
                         <TextBox.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </TextBox.Effect>
                     </TextBox>
+                    <Label Content="Amount of tweets to display:" Height="19" HorizontalAlignment="Left" Margin="-1,206,0,0" Name="label8" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White">
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="174,206,0,0" Name="SettingsAmountOfTweetsTextb" VerticalAlignment="Top" Width="40" TextChanged="SettingsAmountOfTweetsTextb_TextChanged" />
                 </Grid>
             </TabItem>
         </TabControl>
