--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -564,29 +564,34 @@
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="0" Height="28" HorizontalAlignment="Right" Margin="0,138,185,0" Name="label5" VerticalAlignment="Top" Foreground="White">
+                    <Label Content="0" Height="28" HorizontalAlignment="Right" Margin="0,138,195,0" Name="label5" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="281,138,0,0" Name="label6" VerticalAlignment="Top" Foreground="White">
+                    <Label Content="100" Height="28" HorizontalAlignment="Left" Margin="284,138,0,0" Name="label6" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
                     <Button Content="Clear User Data and Restart" Height="25" HorizontalAlignment="Left" Margin="155,0,0,24" Name="ClearUserDataButton" VerticalAlignment="Bottom" Width="155" Click="ClearUserDataButton_Click" />
-                    <Label Content="Text balloon opacity:" Height="21" HorizontalAlignment="Left" Margin="-1,172,0,0" Name="label7" VerticalAlignment="Top" Padding="0" Foreground="White">
+                    <Label Content="Text balloon&#10;        opacity:" Height="34" HorizontalAlignment="Left" Margin="-1,168,0,0" Name="label7" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Slider Height="23" HorizontalAlignment="Right" Margin="125,172,37,0" Name="OpacitySlider" VerticalAlignment="Top" Width="154" Value="0.6" Maximum="1" SmallChange="0.01" ValueChanged="OpacitySlider_ValueChanged" TickFrequency="0.1" />
-                    <Label Content="0" Height="28"  HorizontalAlignment="Right" Margin="115,172,185,0" Name="label9" VerticalAlignment="Top" Foreground="White">
+                    <TextBox Height="23" MaxLength="2" HorizontalAlignment="Left" Margin="68,177,0,0" Name="opacityLabel" Text="{Binding Path=Value, ElementName=OpacitySlider}" VerticalAlignment="Top" Focusable="True" IsEnabled="True" IsReadOnly="True" Background="#00000000" BorderThickness="0" Width="32" TextChanged="volumeLabel_TextChanged" Foreground="White">
+                        <TextBox.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
+                        </TextBox.Effect>
+                    </TextBox>
+                    <Slider Height="23" HorizontalAlignment="Left" Margin="125,172,0,0" Name="OpacitySlider" VerticalAlignment="Top" Width="154" Value="0.6" Maximum="1" SmallChange="0.01" ValueChanged="OpacitySlider_ValueChanged" TickFrequency="0.1" />
+                    <Label Content="0" Height="28"  HorizontalAlignment="Right" Margin="0,172,195,0" Name="label9" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="1" Height="28" HorizontalAlignment="Right" Margin="0,172,19,0" Name="label10" VerticalAlignment="Top" Foreground="White">
+                    <Label Content="1" Height="28" HorizontalAlignment="Right" Margin="0,172,16,0" Name="label10" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
@@ -602,6 +607,18 @@
                         </Label.Effect>
                     </Label>
                     <TextBox Height="23" HorizontalAlignment="Left" Margin="174,206,0,0" Name="SettingsAmountOfTweetsTextb" VerticalAlignment="Top" Width="40" TextChanged="SettingsAmountOfTweetsTextb_TextChanged" />
+                    <Label Content="Display for notification:" Height="19" HorizontalAlignment="Left" Margin="-1,246,0,0" Name="displLbl" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White">
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="174,246,0,0" Name="DisplaysComboBox" VerticalAlignment="Top" Width="136" SelectionChanged="DisplaysComboBox_SelectionChanged" />
+                    <CheckBox Content="" Height="16" HorizontalAlignment="Left" Margin="174,275,0,0" Name="topmostcheckbox" VerticalAlignment="Top" Checked="topmostcheckbox_Checked" Unchecked="topmostcheckbox_Unchecked" />
+                    <Label Content="overlap other windows" Height="19" HorizontalAlignment="Left" Margin="191,273,0,0" Name="topmostlbl" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White"  >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
                 </Grid>
             </TabItem>
         </TabControl>
