Bug fixes + multi user works now
Implemented a basic buggy account management screen, it's all very much
WIP but it works. TODO: After making an account, restart o3o for it to
work, will fix that later

--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -619,6 +619,7 @@
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
+                    <Button Content="Manage Accounts" Height="23" HorizontalAlignment="Left" Margin="155,559,0,0" Name="button_Manage_Accounts" VerticalAlignment="Top" Width="155" Click="button_Manage_Accounts_Click" />
                 </Grid>
             </TabItem>
         </TabControl>
